added public java library

--- a/src/main/java/net/starlark/java/BUILD
+++ b/src/main/java/net/starlark/java/BUILD
@@ -2,10 +2,21 @@
 
 licenses(["notice"])
 
+load("@rules_java//java:defs.bzl", "java_library")
+
 filegroup(
     name = "srcs",
     srcs = ["BUILD"],
     visibility = [":bazel"],
+)
+
+# FIX: Publically visible starlark java parser.
+java_library(
+    name = "starlark_api",
+    srcs = glob([
+        "//src/main/java/net/starlark/java/...",
+    ]),
+    visibility = ["//visibility:public"],
 )
 
 # The java.starlark.net project, including its tests.
