added visibility to target modules

--- a/src/main/java/net/starlark/java/annot/BUILD
+++ b/src/main/java/net/starlark/java/annot/BUILD
@@ -3,7 +3,7 @@ load("@rules_java//java:defs.bzl", "java_library")
 filegroup(
     name = "srcs",
     srcs = glob(["**"]),
-    visibility = ["//src:__subpackages__"],
+    visibility = ["//visibility:public"],
 )
 
 # Annotations to make Java classes and methods accessible from Starlark.
