--- a/src/main/java/net/starlark/java/spelling/BUILD
+++ b/src/main/java/net/starlark/java/spelling/BUILD
@@ -3,7 +3,7 @@
 filegroup(
     name = "srcs",
     srcs = glob(["**"]),
-    visibility = ["//src:__subpackages__"],
+    visibility = ["//visibility:public"],
 )
 
 java_library(
