--- a/src/main/java/net/starlark/java/spelling/BUILD
+++ b/src/main/java/net/starlark/java/spelling/BUILD
@@ -3,16 +3,12 @@
 filegroup(
     name = "srcs",
     srcs = glob(["**"]),
-    visibility = ["//visibility:public"],
+    visibility = ["//src:__subpackages__"],
 )
 
 java_library(
     name = "spelling",
     srcs = ["SpellChecker.java"],
-    # The SpellChecker is available to Starlark and Bazel, but not the world.
-    visibility = [
-        "//src/main/java/net/starlark/java:bazel",
-        "//src/main/java/net/starlark/java:starlark",
-    ],
+    visibility = ["//visibility:public"],
     deps = ["//third_party:jsr305"],
 )
