build fat bazel jars

--- a/starlord/BUILD
+++ b/starlord/BUILD
@@ -4,10 +4,14 @@ java_binary(
     srcs = [
         "Main.java",
     ],
-    runtime_deps = [
+    deps = [
+        "//src/main/java/com/google/devtools/build/skyframe",
+        "//src/main/java/com/google/devtools/build/lib/cmdline",
+        "//src/main/java/com/google/devtools/build/lib/packages",
         "//src/main/java/net/starlark/java/syntax",
         "//src/main/java/net/starlark/java/eval",
         "//src/main/java/net/starlark/java/annot",
         "//src/main/java/net/starlark/java/annot/processor",
     ],
+    visibility = ["//visibility:public"],
 )
